--- a/css/cssindex.css
+++ b/css/cssindex.css
@@ -8,20 +8,21 @@ width:100%;}
 		left:0px; 
 		top:0px; 
 		margin:0px;
-		background-color:red;
-		height:100%;
+		height:100vh;
+		background-color:#CFF;
 		}
 .medio{
-	background-color:#0C3;
-	
+	padding:30px;
+	height:100vh;
+	background-color:#CC9;
 	}
 	
 .derecho{
 		right:0px; 
 		top:0px; 
 		margin: 0px;
-		background-color:blue;
-		height:100%;
+		height:100vh;
+		background-color:#6F9;
 		}
 .logo{width:200px;}
 
