--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 	text-align: center;
 	font-size: 20px;
 	}
+.joc{height:352px;
+	width: 250px;
+	float:left;
+	margin:10px;}
 	
 .tituloCat{
 	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -14,3 +18,7 @@
 	}
 	
 .desc{text-align:center;}
+
+.info{
+	display:block;
+	line-height: 40px;}
