--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,12 @@
 	text-align: center;
 	font-size: 20px;
 	}
-.joc{height:352px;
-	width: 250px;
+.joc{height:452px;
+	width: 400px;
 	float:left;
-	margin:10px;}
+	margin:10px;
+	padding:10px;}
+.informacio{padding:10px;}
 	
 .tituloCat{
 	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -22,3 +24,20 @@
 .info{
 	display:block;
 	line-height: 40px;}
+
+.tx20{
+	font-size:20px;}
+.tx16{
+	font-size:16px;}
+	.pad10{padding:10px;}
+.taula{
+	margin-left:200px;
+margin-right:200px;}
+
+.marginauto{
+	margin: 0px auto; 
+	 }
+	 
+	 .glyphicon {
+    font-size: 30px;
+}
